AC_INIT(libmpc, [0.9.0], [https://github.com/orangeduck/mpc])
AC_CONFIG_AUX_DIR([aux_dir])
AM_INIT_AUTOMAKE([-Wall foreign])
AC_CONFIG_SRCDIR([src/mpc.c])
AC_CONFIG_FILES([
  Makefile
  src/Makefile
  tests/Makefile
  libmpc.pc
])
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
LT_INIT
AC_HEADER_DIRENT
AC_HEADER_STAT
AC_HEADER_STDC
AC_OUTPUT
